@@ -27,6 +27,7 @@
 - teach automount about sss source.
 - fix init script usage message.
 - ignore duplicate exports in auto.net.
+- add kernel verion check function.
 
 28/06/2011 autofs-5.0.6
 -----------------------
